Fix Spacing

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body * {
 	margin-top: 35px;
  }
 form legend {
+    padding-top: 20px;
 	text-align: center;
     font-weight: 300;
     color: #565656;
